add master paper

--- a/paper/latex/citations.bib
+++ b/paper/latex/citations.bib
@@ -14,12 +14,354 @@
   urldate = {2024-05-07}
 }
 
+@misc{défossez2021music,
+  title={Music Source Separation in the Waveform Domain}, 
+  author={Alexandre Défossez and Nicolas Usunier and Léon Bottou and Francis Bach},
+  year={2021},
+  eprint={1911.13254},
+  archivePrefix={arXiv},
+  primaryClass={cs.SD}
+}
+
+@article{Cano2019Musical,
+  author={Cano, Estefania and FitzGerald, Derry and Liutkus, Antoine and Plumbley, Mark D. and Stöter, Fabian-Robert},
+  journal={IEEE Signal Processing Magazine}, 
+  title={Musical Source Separation: An Introduction}, 
+  year={2019},
+  volume={36},
+  number={1},
+  pages={31-40},
+  keywords={Music;Harmonic analysis;Multiple signal classification;Instruments;Spectrogram;Power harmonic filters;Source separation},
+  doi={10.1109/MSP.2018.2874719}
+}
+
+@article{Rafii2018Overview,
+  author={Rafii, Zafar and Liutkus, Antoine and Stöter, Fabian-Robert and Mimilakis, Stylianos Ioannis and FitzGerald, Derry and Pardo, Bryan},
+  journal={IEEE/ACM Transactions on Audio, Speech, and Language Processing}, 
+  title={An Overview of Lead and Accompaniment Separation in Music}, 
+  year={2018},
+  volume={26},
+  number={8},
+  pages={1307-1335},
+  keywords={Speech;Lead;Speech processing;Spectrogram;Music;Time-frequency analysis;Source separation;Source separation;music;accompaniment;lead;overview},
+  doi={10.1109/TASLP.2018.2825440}
+}
+
+@phdthesis{davies2007towards,
+  title={Towards automatic rhythmic accompaniment},
+  author={Davies, Matthew Edward Price},
+  year={2007},
+  school={Citeseer}
+}
+
+@article{li2020application,
+  title={Application of computer-based auto accompaniment in music education},
+  author={Li, Yifeng},
+  journal={International Journal of Emerging Technologies in Learning (iJET)},
+  volume={15},
+  number={6},
+  pages={140--151},
+  year={2020},
+  publisher={International Journal of Emerging Technology in Learning}
+}
+
+@inproceedings{zhang2023design,
+  title={Design of Piano Automatic Accompaniment System Based on Artificial Intelligence Algorithm},
+  author={Zhang, Xinwen and Liu, Chun},
+  booktitle={International Conference on Computational Finance and Business Analytics},
+  pages={249--258},
+  year={2023},
+  organization={Springer}
+}
+
+@article{orio2003score,
+  title={Score following: State of the art and new developments},
+  author={Orio, Nicola and Lemouton, Serge and Schwarz, Diemo},
+  journal={New Interfaces for Musical Expression (NIME)},
+  year={2003}
+}
+
+@article{dorfer2016towards,
+  title={Towards score following in sheet music images},
+  author={Dorfer, Matthias and Arzt, Andreas and Widmer, Gerhard},
+  journal={arXiv preprint arXiv:1612.05050},
+  year={2016}
+}
+
+@article{ji2020comprehensive,
+  title={A comprehensive survey on deep music generation: Multi-level representations, algorithms, evaluations, and future directions},
+  author={Ji, Shulei and Luo, Jing and Yang, Xinyu},
+  journal={arXiv preprint arXiv:2011.06801},
+  year={2020}
+}
+
+@article{hernandez2022music,
+  title={Music composition with deep learning: A review},
+  author={Hernandez-Olivan, Carlos and Beltran, Jose R},
+  journal={Advances in speech and music technology: computational aspects and applications},
+  pages={25--50},
+  year={2022},
+  publisher={Springer}
+}
+
+@article{solanki2022music,
+  title={Music instrument recognition using deep convolutional neural networks},
+  author={Solanki, Arun and Pandey, Sachin},
+  journal={International Journal of Information Technology},
+  volume={14},
+  number={3},
+  pages={1659--1668},
+  year={2022},
+  publisher={Springer}
+}
+
+@inproceedings{racharla2020predominant,
+  title={Predominant musical instrument classification based on spectral features},
+  author={Racharla, Karthikeya and Kumar, Vineet and Jayant, Chaudhari Bhushan and Khairkar, Ankit and Harish, Paturu},
+  booktitle={2020 7th International Conference on Signal Processing and Integrated Networks (SPIN)},
+  pages={617--622},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{manilow2020hierarchical,
+  title={Hierarchical Musical Instrument Separation.},
+  author={Manilow, Ethan and Wichern, Gordon and Le Roux, Jonathan},
+  booktitle={ISMIR},
+  pages={376--383},
+  year={2020}
+}
+
+@incollection{Mangla2023Spotify,
+  author = {Puneet Mangla},
+  title = {Spotify Music Recommendation Systems},
+  booktitle = {PyImageSearch},
+  editor = {Puneet Chugh and Aritra Roy Gosthipaty and Susan Huot and Kseniia Kidriavsteva and Ritwik Raha},
+  year = {2023},
+  url = {https://pyimg.co/v7gpa},
+}
+
+@online{Ableton2024Ableton11,
+  title = {Ableton Live 11 Lite},
+  author = {Ableton},
+  year = {2024},
+  url = {https://www.ableton.com/en/live/},
+  urldate = {2024-06-04}
+}
+
+@online{Apple2024LogicPro,
+  title = {Logic Pro},
+  author = {Apple},
+  year = {2024},
+  url = {https://www.apple.com/tw/logic-pro/},
+  urldate = {2024-06-04}
+}
+
+@online{PreSonus2024StudioOne,
+  title = {Studio One},
+  author = {PreSonus},
+  year = {2024},
+  url = {https://www.presonus.com/en/studio-one.html},
+  urldate = {2024-06-04}
+}
+
+@online{Ronimusic2024Amazing,
+  title = {Amazing Slow Downer},
+  author = {Ronimusic},
+  year = {2024},
+  url = {https://www.ronimusic.com/},
+  urldate = {2024-06-04}
+}
+
+@online{FORSCORE2024forScore,
+  title = {forScore turbocharge tour sheet music},
+  author = {FORSCORE},
+  year = {2024},
+  url = {https://forscore.co/},
+  urldate = {2024-06-04}
+}
+
+
 @online{ISMIR2024InternationalSociety,
   title = {International Society for Music Information Retrieval},
   author = {ISMIR},
   year = {2024},
   url = {https://ismir.net/},
   urldate = {2024-05-06}
+}
+
+@article{zhao2022research,
+  title={Research on music signal processing based on a blind source separation algorithm},
+  author={Zhao, Xiaoming and Tuo, Qiang and Guo, Ruosi and Kong, Tengteng},
+  journal={Annals of Emerging Technologies in Computing (AETiC)},
+  volume={6},
+  number={4},
+  year={2022}
+}
+
+@inproceedings{wang2022songdriver,
+  title={Songdriver: Real-time music accompaniment generation without logical latency nor exposure bias},
+  author={Wang, Zihao and Zhang, Kejun and Wang, Yuxing and Zhang, Chen and Liang, Qihao and Yu, Pengfei and Feng, Yongsheng and Liu, Wenbo and Wang, Yikai and Bao, Yuntao and others},
+  booktitle={Proceedings of the 30th ACM International Conference on Multimedia},
+  pages={1057--1067},
+  year={2022}
+}
+
+@article{ding2023museflow,
+  title={MuseFlow: music accompaniment generation based on flow},
+  author={Ding, Fanyu and Cui, Yidong},
+  journal={Applied Intelligence},
+  volume={53},
+  number={20},
+  pages={23029--23038},
+  year={2023},
+  publisher={Springer}
+}
+
+@article{stoller2018wave,
+  title={Wave-u-net: A multi-scale neural network for end-to-end audio source separation},
+  author={Stoller, Daniel and Ewert, Sebastian and Dixon, Simon},
+  journal={arXiv preprint arXiv:1806.03185},
+  year={2018}
+}
+
+@misc{défossez2021music,
+  title={Music Source Separation in the Waveform Domain}, 
+  author={Alexandre Défossez and Nicolas Usunier and Léon Bottou and Francis Bach},
+  year={2021},
+  eprint={1911.13254},
+  archivePrefix={arXiv},
+  primaryClass={cs.SD}
+}
+
+@article{defossez2021hybrid,
+  title={Hybrid spectrogram and waveform source separation},
+  author={D{\'e}fossez, Alexandre},
+  journal={arXiv preprint arXiv:2111.03600},
+  year={2021}
+}
+
+@inproceedings{rouard2023hybrid,
+  title={Hybrid transformers for music source separation},
+  author={Rouard, Simon and Massa, Francisco and D{\'e}fossez, Alexandre},
+  booktitle={ICASSP 2023-2023 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  pages={1--5},
+  year={2023},
+  organization={IEEE}
+}
+
+@inproceedings{miron2017generating,
+  title={Generating data to train convolutional neural networks for classical music source separation},
+  author={Miron, Marius and Janer Mestres, Jordi and G{\'o}mez Guti{\'e}rrez, Emilia},
+  booktitle={Lokki T, P{\"a}tynen J, V{\"a}lim{\"a}ki V, editors. Proceedings of the 14th Sound and Music Computing Conference; 2017 Jul 5-8; Espoo, Finland. Aalto: Aalto University; 2017. p. 227-33.},
+  year={2017},
+  organization={Aalto University}
+}
+
+@article{hennequin2020spleeter,
+  title={Spleeter: a fast and efficient music source separation tool with pre-trained models},
+  author={Hennequin, Romain and Khlif, Anis and Voituret, Felix and Moussallam, Manuel},
+  journal={Journal of Open Source Software},
+  volume={5},
+  number={50},
+  pages={2154},
+  year={2020}
+}
+
+@inproceedings{heydari2021don,
+  title={Don’t look back: An online beat tracking method using RNN and enhanced particle filtering},
+  author={Heydari, Mojtaba and Duan, Zhiyao},
+  booktitle={ICASSP 2021-2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  pages={236--240},
+  year={2021},
+  organization={IEEE}
+}
+
+@incollection{goto2021musical,
+  title={Musical understanding at the beat level: real-time beat tracking for audio signals},
+  author={Goto, Masataka and Muraoka, Yoichi},
+  booktitle={Computational auditory scene analysis},
+  pages={157--176},
+  year={2021},
+  publisher={CRC Press}
+}
+
+@article{di2021downbeat,
+  title={Downbeat tracking with tempo-invariant convolutional neural networks},
+  author={Di Giorgi, Bruno and Mauch, Matthias and Levy, Mark},
+  journal={arXiv preprint arXiv:2102.02282},
+  year={2021}
+}
+
+@article{brazier2021improving,
+  title={Improving Real-time Score Following in Opera by Combining Music with Lyrics Tracking},
+  author={Brazier, Charles and Widmer, Gerhard},
+  journal={arXiv preprint arXiv:2110.02592},
+  year={2021}
+}
+
+@INPROCEEDINGS{Raffel2016Optimizing,
+  author={Raffel, Colin and Ellis, Daniel P. W.},
+  booktitle={2016 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)}, 
+  title={Optimizing DTW-based audio-to-MIDI alignment and matching}, 
+  year={2016},
+  volume={},
+  number={},
+  pages={81-85},
+  keywords={Instruments;Optimization;Bayes methods;Data mining;Measurement;Audio recording;System analysis and design;Dynamic Time Warping;Audio to MIDI Alignment;Sequence Retrieval;Bayesian Optimization;Hyperparameter Optimization},
+  doi={10.1109/ICASSP.2016.7471641}
+}
+
+@INPROCEEDINGS{Arzt2012Adaptive,
+  author={Arzt, Andreas and Widmer, Gerhard and Dixon, Simon},
+  booktitle={2012 Proceedings of the 20th European Signal Processing Conference (EUSIPCO)}, 
+  title={Adaptive distance normalization for real-time music tracking}, 
+  year={2012},
+  volume={},
+  number={},
+  pages={2689-2693},
+  keywords={Real-time systems;Harmonic analysis;Vectors;Heuristic algorithms;Robustness;Multiple signal classification;Music Processing;Real-time Music Tracking;Audio Alignment;Audio Features;Feature Normalization},
+  doi={}
+}
+
+@inproceedings{cano1999score,
+  title={Score-performance matching using HMMs},
+  author={Cano, Pedro and Loscos, Alex and Bonada, Jordi},
+  booktitle={ICMC},
+  year={1999},
+  organization={Citeseer}
+}
+
+@online{Antescofo2024metronautapp,
+  title = {metronautapp},
+  author = {Antescofo},
+  year = {2024},
+  url = {https://metronautapp.com/zh-TW},
+  urldate = {2024-06-04}
+}
+
+@online{python2024multiprocessing,
+  title = {multiprocessing — Process-based parallelism},
+  author = {Python},
+  year = {2024},
+  url = {https://docs.python.org/3/library/multiprocessing.html},
+  urldate = {2024-06-02}
+}
+
+@online{python2024pyaudio,
+  title = {Pyaudio package},
+  author = {Python},
+  year = {2024},
+  url = {https://people.csail.mit.edu/hubert/pyaudio/},
+  urldate = {2024-06-02}
+}
+
+@online{kopikostar2024Beethoven,
+  title = {Beethoven's "Spring Sonata" Op.24 Allegro},
+  author = {kopikostar},
+  year = {2024},
+  url = {https://youtu.be/uDSfijK1qxo?list=PLc0i4xi7nsQRG0UTdRKRc2bxjh9pHYYJw},
+  urldate = {2024-06-03}
 }
 
 @misc{Yuki_Mitsufuji2021MusicDemixing,
@@ -47,6 +389,36 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv230806979F},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@article{lee2000algorithms,
+  title={Algorithms for non-negative matrix factorization},
+  author={Lee, Daniel and Seung, H Sebastian},
+  journal={Advances in neural information processing systems},
+  volume={13},
+  year={2000}
+}
+
+@article{comon1994independent,
+  title={Independent component analysis, a new concept?},
+  author={Comon, Pierre},
+  journal={Signal processing},
+  volume={36},
+  number={3},
+  pages={287--314},
+  year={1994},
+  publisher={Elsevier}
+}
+
+% @article{eddy1996hidden,
+%   title={Hidden markov models},
+%   author={Eddy, Sean R},
+%   journal={Current opinion in structural biology},
+%   volume={6},
+%   number={3},
+%   pages={361--365},
+%   year={1996},
+%   publisher={Elsevier}
+% }
 
 @article{Luo_Yi2022MusicSourceSeparation,
        author = {{Luo}, Yi and {Yu}, Jianwei},
@@ -95,14 +467,39 @@ publisher = {The Open Journal},
   journal = {Journal of Open Source Software} 
 }
 
-@article{Senin2008Dynamic,
-  title={Dynamic time warping algorithm review},
-  author={Senin, Pavel},
-  journal={Information and Computer Science Department University of Hawaii at Manoa Honolulu, USA},
-  volume={855},
-  number={1-23},
-  pages={40},
-  year={2008}
+@misc{Rafii2017musdb18,
+  author       = {Rafii, Zafar and
+                  Liutkus, Antoine and
+                  Fabian-Robert St{\"o}ter and
+                  Mimilakis, Stylianos Ioannis and
+                  Bittner, Rachel},
+  title        = {The {MUSDB18} corpus for music separation},
+  month        = dec,
+  year         = 2017,
+  doi          = {10.5281/zenodo.1117372},
+  url          = {https://doi.org/10.5281/zenodo.1117372}
+}
+
+% @article{Senin2008Dynamic,
+%   title={Dynamic time warping algorithm review},
+%   author={Senin, Pavel},
+%   journal={Information and Computer Science Department University of Hawaii at Manoa Honolulu, USA},
+%   volume={855},
+%   number={1-23},
+%   pages={40},
+%   year={2008}
+% }
+
+@article{Sakoe1978Dynamic,
+  author={Sakoe, H. and Chiba, S.},
+  journal={IEEE Transactions on Acoustics, Speech, and Signal Processing}, 
+  title={Dynamic programming algorithm optimization for spoken word recognition}, 
+  year={1978},
+  volume={26},
+  number={1},
+  pages={43-49},
+  keywords={Dynamic programming;Heuristic algorithms;Fluctuations;Timing;Signal processing algorithms;Speech processing;Pattern matching;Constraint optimization;Feature extraction;Acoustics},
+  doi={10.1109/TASSP.1978.1163055}
 }
 
 @misc{Dong_HaoWen2021Bach,
@@ -118,6 +515,39 @@ publisher = {The Open Journal},
   author    = "Muneratti Ortega, F{\'a}bio Jos{\'e}",
   publisher = "Zenodo",
   year      =  2021
+}
+
+@misc{McFee2024librosa,
+  title     = "librosa/librosa: 0.10.2.post1",
+  author    = "McFee, Brian and McVicar, Matt and Faronbi, Daniel and Roman,
+               Iran and Gover, Matan and Balke, Stefan and Seyfarth, Scott and
+               Malek, Ayoub and Raffel, Colin and Lostanlen, Vincent and van
+               Niekirk, Benjamin and Lee, Dana and Cwitkowitz, Frank and
+               Zalkow, Frank and Nieto, Oriol and Ellis, Dan and Mason, Jack
+               and Lee, Kyungyun and Steers, Bea and Halvachs, Emily and
+               Thom{\'e}, Carl and Robert-St{\"o}ter, Fabian and Bittner,
+               Rachel and Wei, Ziyao and Weiss, Adam and Battenberg, Eric and
+               Choi, Keunwoo and Yamamoto, Ryuichi and Carr, C J and Metsai,
+               Alex and Sullivan, Stefan and Friesch, Pius and Krishnakumar,
+               Asmitha and Hidaka, Shunsuke and Kowalik, Steve and Keller,
+               Fabian and Mazur, Dan and Chabot-Leclerc, Alexandre and
+               Hawthorne, Curtis and Ramaprasad, Chandrashekhar and Keum,
+               Myungchul and Gomez, Juanita and Monroe, Will and Morozov,
+               Viktor Andreevitch and Eliasi, Kian and {nullmightybofo} and
+               Biberstein, Paul and Dorukhan Sergin, N and Hennequin, Romain
+               and Naktinis, Rimvydas and {beantowel} and Kim, Taewoon and
+               {\AA}sen, Jon Petter and Lim, Joon and Malins, Alex and
+               Here{\~n}{\'u}, Dar{\'\i}o and van der Struijk, Stef and Nickel,
+               Lorenz and Wu, Jackie and Wang, Zhen and Gates, Tim and
+               Vollrath, Matt and Sarroff, Andy and {Xiao-Ming} and Porter,
+               Alastair and Kranzler, Seth and {Voodoohop} and Di Gangi, Mattia
+               and Jinoz, Helmi and Guerrero, Connor and Mazhar, Abduttayyeb
+               and {toddrme} and Baratz, Zvi and Kostin, Anton and Zhuang,
+               Xinlu and Lo, Cash Tinghin and Campr, Pavel and Semeniuc, Eric
+               and Biswal, Monsij and Moura, Shayenne and Brossier, Paul and
+               Lee, Hojin and Pimenta, Waldir",
+  publisher = "Zenodo",
+  year      =  2024
 }
 
 @inproceedings{Thickstun2017Learning,
@@ -141,4 +571,88 @@ publisher = {The Open Journal},
     pages = {},
     title = {MedleyDB: A Multitrack Dataset for Annotation-Intensive MIR Research},
     journal = {Proceedings - 15th International Society for Music Information Retrieval Conference (ISMIR 2014)}
+}
+
+@article{Vincent2006Performance,
+  author = {Vincent, Emmanuel and Gribonval, Rémi and Févotte, Cédric},
+  year = {2006},
+  month = {08},
+  pages = {1462 - 1469},
+  title = {Performance measurement in blind audio source separation},
+  volume = {14},
+  journal = {Audio, Speech, and Language Processing, IEEE Transactions on},
+  doi = {10.1109/TSA.2005.858005}
+}
+
+@inproceedings{Lin2020AHumanComputerDuetSystem,
+    title={A Human-Computer Duet System for Music Performance},
+    series={MM ’20},
+    url={http://dx.doi.org/10.1145/3394171.3413921},
+    DOI={10.1145/3394171.3413921},
+    booktitle={Proceedings of the 28th ACM International Conference on Multimedia},
+    publisher={ACM},
+    author={Lin, Yuen-Jen and Kao, Hsuan-Kai and Tseng, Yih-Chih and Tsai, Ming and Su, Li},
+    year={2020},
+    month=oct, collection={MM ’20} 
+}
+
+@article{henkel2019score,
+  title={Score Following as a Multi-Modal Reinforcement Learning Problem.},
+  author={Henkel, Florian and Balke, Stefan and Dorfer, Matthias and Widmer, Gerhard},
+  journal={Trans. Int. Soc. Music. Inf. Retr.},
+  volume={2},
+  number={1},
+  pages={67--81},
+  year={2019}
+}
+
+@inproceedings{zhang2023design,
+  title={Design of Piano Automatic Accompaniment System Based on Artificial Intelligence Algorithm},
+  author={Zhang, Xinwen and Liu, Chun},
+  booktitle={International Conference on Computational Finance and Business Analytics},
+  pages={249--258},
+  year={2023},
+  organization={Springer}
+}
+
+@INPROCEEDINGS{Wei2018Online,
+  author={Wei, I-Chieh and Su, Li},
+  booktitle={2018 IEEE 20th International Workshop on Multimedia Signal Processing (MMSP)}, 
+  title={Online Music Performance Tracking Using Parallel Dynamic Time Warping}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={1-6},
+  keywords={Music;Estimation;Instruction sets;Servers;Task analysis;Hardware;Algorithms;music information retrieval;online audio alignment;parallel computing},
+  doi={10.1109/MMSP.2018.8547076}
+}
+
+@inproceedings{Arzt2010Towards,
+  author = {Arzt, Andreas and Widmer, Gerhard},
+  title = {Towards Effective 'Any-Time' Music Tracking},
+  year = {2010},
+  isbn = {9781607506751},
+  publisher = {IOS Press},
+  address = {NLD},
+  booktitle = {Proceedings of the 2010 Conference on STAIRS 2010: Proceedings of the Fifth Starting AI Researchers' Symposium},
+  pages = {24–36},
+  numpages = {13}
+}
+
+% @inproceedings{dixon2005ODTW,
+%   title={An On-Line Time Warping Algorithm for Tracking Musical Performances.},
+%   author={Dixon, Simon},
+%   booktitle={IJCAI},
+%   pages={1727--1728},
+%   year={2005}
+% }
+
+@inproceedings{dixon2005ODTW,
+  title={Live tracking of musical performances using on-line time warping},
+  author={Dixon, Simon},
+  booktitle={Proceedings of the 8th International Conference on Digital Audio Effects},
+  volume={92},
+  pages={97},
+  year={2005},
+  organization={Citeseer}
 }
