--- a/paper/latex/config.tex
+++ b/paper/latex/config.tex
@@ -27,8 +27,8 @@
 
 \setboolean{printcopyright}{false} % {true}/{false} print copyright text on titlepage or cover.
 
-\def\keywordsZh{音樂資訊檢索, 音源分離, 自動伴奏, 深度學習, 線上動態時間規劃}
-\def\keywordsEn{Music Informaation Retrieval, Music Source Separation, Automatic Accompaniment, Deep Learning, Online Dynamic Time Warping}
+\def\keywordsZh{音樂資訊檢索, 音源分離, 音樂追蹤, 自動伴奏, 深度學習, 線上動態時間規劃}
+\def\keywordsEn{Music Informaation Retrieval, Music Source Separation, Music Tracking, Automatic Accompaniment, Deep Learning, Online Dynamic Time Warping}
 
 
 %%%%% Set letters filename | 設定插入文件 %%%%%
