--- a/paper/latex/citations.bib
+++ b/paper/latex/citations.bib
@@ -656,3 +656,27 @@ publisher = {The Open Journal},
   year={2005},
   organization={Citeseer}
 }
+
+@online{YuJieLin2024MidiTrackingResults,
+  title = {系統在不同速度下的追蹤結果所使用的MIDI檔案與結果音檔},
+  author = {Yu-Jie, Lin},
+  year = {2024},
+  url = {https://github.com/a0950088/Master/tree/main/paper/resource/4.2.1},
+  urldate = {2024-06-11}
+}
+
+@online{YuJieLin2024MusicSourceSeparation,
+  title = {Beethoven音源分離結果音檔},
+  author = {Yu-Jie, Lin},
+  year = {2024},
+  url = {https://github.com/a0950088/Master/tree/main/paper/resource/4.2.2/music%20source%20separation},
+  urldate = {2024-06-11}
+}
+
+@online{YuJieLin2024DiffFeatureTrackingResults,
+  title = {不同特徵下的追蹤結果音檔},
+  author = {Yu-Jie, Lin},
+  year = {2024},
+  url = {https://github.com/a0950088/Master/tree/main/paper/resource/4.2.2},
+  urldate = {2024-06-11}
+}
