add certification and modified paper

--- a/paper/latex/main.tex
+++ b/paper/latex/main.tex
@@ -54,9 +54,9 @@
         %    \cleardoublepage
         %    \includepdf{\letterThesisSim}}{}
         % 學術倫理修課證明
-        %\IfFileExists{\letterCareCert}{
-        %    \cleardoublepage
-        %    \includepdf{\letterCareCert}}{}
+        \IfFileExists{\letterCareCert}{
+           \cleardoublepage
+           \includepdf{\letterCareCert}}{}
         % 遠距口試申請
         %\IfFileExists{\letterRemoteExam}{
         %    \cleardoublepage
