--- a/paper/latex/citations.bib
+++ b/paper/latex/citations.bib
@@ -680,3 +680,21 @@ publisher = {The Open Journal},
   url = {https://github.com/a0950088/Master/tree/main/paper/resource/4.2.2},
   urldate = {2024-06-11}
 }
+
+@article{abdul2022mel,
+  title={Mel frequency cepstral coefficient and its applications: A review},
+  author={Abdul, Zrar Kh and Al-Talabani, Abdulbasit K},
+  journal={IEEE Access},
+  volume={10},
+  pages={122136--122158},
+  year={2022},
+  publisher={IEEE}
+}
+
+@online{lin2021AIMusician,
+  title = {今晚，想來場臨時音樂會？讓 AI 虛擬音樂家幫你實現！},
+  author = {林承勳, 中央研究院研之有物},
+  year = {2021},
+  url = {https://research.sinica.edu.tw/ai-virtual-musician-li-su/},
+  urldate = {2024-06-23}
+}
