--- a/paper/latex/citations.bib
+++ b/paper/latex/citations.bib
@@ -300,17 +300,17 @@
   year={2021}
 }
 
-@INPROCEEDINGS{Raffel2016Optimizing,
-  author={Raffel, Colin and Ellis, Daniel P. W.},
-  booktitle={2016 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)}, 
-  title={Optimizing DTW-based audio-to-MIDI alignment and matching}, 
-  year={2016},
-  volume={},
-  number={},
-  pages={81-85},
-  keywords={Instruments;Optimization;Bayes methods;Data mining;Measurement;Audio recording;System analysis and design;Dynamic Time Warping;Audio to MIDI Alignment;Sequence Retrieval;Bayesian Optimization;Hyperparameter Optimization},
-  doi={10.1109/ICASSP.2016.7471641}
-}
+% @INPROCEEDINGS{Raffel2016Optimizing,
+%   author={Raffel, Colin and Ellis, Daniel P. W.},
+%   booktitle={2016 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)}, 
+%   title={Optimizing DTW-based audio-to-MIDI alignment and matching}, 
+%   year={2016},
+%   volume={},
+%   number={},
+%   pages={81-85},
+%   keywords={Instruments;Optimization;Bayes methods;Data mining;Measurement;Audio recording;System analysis and design;Dynamic Time Warping;Audio to MIDI Alignment;Sequence Retrieval;Bayesian Optimization;Hyperparameter Optimization},
+%   doi={10.1109/ICASSP.2016.7471641}
+% }
 
 @INPROCEEDINGS{Arzt2012Adaptive,
   author={Arzt, Andreas and Widmer, Gerhard and Dixon, Simon},
@@ -400,7 +400,7 @@ archivePrefix = {arXiv},
 
 @article{comon1994independent,
   title={Independent component analysis, a new concept?},
-  author={Comon, Pierre},
+  author={Pierre Comon},
   journal={Signal processing},
   volume={36},
   number={3},
@@ -615,6 +615,15 @@ publisher = {The Open Journal},
   organization={Springer}
 }
 
+@inproceedings{takahashi2009parallelized,
+  title={A parallelized data stream processing system using dynamic time warping distance},
+  author={Takahashi, Norihiro and Yoshihisa, Tomoki and Sakurai, Yasushi and Kanazawa, Masanori},
+  booktitle={2009 International Conference on Complex, Intelligent and Software Intensive Systems},
+  pages={1100--1105},
+  year={2009},
+  organization={IEEE}
+}
+
 @INPROCEEDINGS{Wei2018Online,
   author={Wei, I-Chieh and Su, Li},
   booktitle={2018 IEEE 20th International Workshop on Multimedia Signal Processing (MMSP)}, 
@@ -692,9 +701,17 @@ publisher = {The Open Journal},
 }
 
 @online{lin2021AIMusician,
-  title = {今晚，想來場臨時音樂會？讓 AI 虛擬音樂家幫你實現！},
-  author = {林承勳, 中央研究院研之有物},
+  title = {中央研究院研之有物: 今晚，想來場臨時音樂會？讓 AI 虛擬音樂家幫你實現！},
+  author = {林承勳},
   year = {2021},
   url = {https://research.sinica.edu.tw/ai-virtual-musician-li-su/},
   urldate = {2024-06-23}
+}
+
+@online{YuJieLin2024MSSDataset,
+  title = {音源分離資料集},
+  author = {Yu-Jie, Lin},
+  year = {2024},
+  url = {https://drive.google.com/drive/folders/1IPGv2l-6QjIwMtAq9m0ijQ-ilvTCFjfU?usp=sharing},
+  urldate = {2024-06-24}
 }
