--- a/paper/latex/citations.bib
+++ b/paper/latex/citations.bib
@@ -277,14 +277,14 @@
   organization={IEEE}
 }
 
-@incollection{goto2021musical,
-  title={Musical understanding at the beat level: real-time beat tracking for audio signals},
-  author={Goto, Masataka and Muraoka, Yoichi},
-  booktitle={Computational auditory scene analysis},
-  pages={157--176},
-  year={2021},
-  publisher={CRC Press}
-}
+% @incollection{goto2021musical,
+%   title={Musical understanding at the beat level: real-time beat tracking for audio signals},
+%   author={Goto, Masataka and Muraoka, Yoichi},
+%   booktitle={Computational auditory scene analysis},
+%   pages={157--176},
+%   year={2021},
+%   publisher={CRC Press}
+% }
 
 @article{di2021downbeat,
   title={Downbeat tracking with tempo-invariant convolutional neural networks},
